force-app/main/default/objects/Product2/fields/APTS_AY_Course_Type__c.field-meta.xml
<CustomField>
    <fullName>APTS_AY_Course_Type__c</fullName>
    <description>Necessary to create the correct price matrix for course literature.</description>
    <label>AY Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACDP</fullName>
            </value>
            <value>
                <fullName>AD</fullName>
            </value>
            <value>
                <fullName>DBM</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>PMBA</fullName>
            </value>
            <value>
                <fullName>PPHD</fullName>
            </value>
            <value>
                <fullName>UF</fullName>
            </value>
            <value>
                <fullName>UTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>