force-app/main/default/objects/Product2/fields/Apts_CoursePricing__c.field-meta.xml
<CustomField>
    <fullName>Apts_CoursePricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the Courses Pricing Callback is triggered to work out the price of this product.</description>
    <label>Course Pricing</label>
    <type>Checkbox</type>
</CustomField>