force-app/main/default/objects/Product2/fields/APTS_Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>APTS_Destination_Location__c</fullName>
    <label>Destination Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Northern Hemisphere</fullName>
            </value>
            <value>
                <fullName>Southern Hemisphere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>