force-app/main/default/objects/Product2/fields/APTS_Is_Optional__c.field-meta.xml
<CustomField>
    <fullName>APTS_Is_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this check box is to identify Optional Product</description>
    <label>Is Optional</label>
    <type>Checkbox</type>
</CustomField>