force-app/main/default/objects/Product2/fields/APTS_PriceOverrideAllowed__c.field-meta.xml
<CustomField>
    <fullName>APTS_PriceOverrideAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Validation rule on the Line Item - if not checked, adjustment type of Price Override is not allowed</description>
    <label>Price Override Allowed</label>
    <type>Checkbox</type>
</CustomField>