force-app/main/default/objects/Product2/fields/Apts_TI_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Apts_TI_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used as Pricing Callback entry criteria to adjust the TI pricing when comparative quote is created (Comparative Quote checkbox on Quote = TRUE)</description>
    <label>TI Pricing</label>
    <type>Checkbox</type>
</CustomField>