force-app/main/default/objects/Product2/fields/Apttus_Config2__Icon__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Icon__c</fullName>
    <description>Displays the icon uploaded using the icon button.</description>
    <formula>HYPERLINK( "/apex/Apttus_Config2__IconUploader?productId="+Id, IF(ISBLANK(Apttus_Config2__IconId__c) , IMAGE("/resource/Apttus_Config2__Image_UploadIcon", "Upload Icon", 50, 50), IMAGE("/servlet/servlet.FileDownload?file="+Apttus_Config2__IconId__c , "Icon", 50, 50)) , "_top" )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Icon for display in application. Click on the icon to add/change the image.</inlineHelpText>
    <label>Icon</label>
    <type>Text</type>
</CustomField>