force-app/main/default/objects/Product2/fields/Apttus_Config2__ProductType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductType__c</fullName>
    <description>The product type</description>
    <inlineHelpText>The product type</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Destination</fullName>
            </value>
            <value>
                <fullName>Enrollment Fee</fullName>
            </value>
            <value>
                <fullName>Entitlement</fullName>
                <isActive>false</isActive>
                <label>Entitlement</label>
            </value>
            <value>
                <fullName>Equipment</fullName>
                <isActive>false</isActive>
                <label>Equipment</label>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>License</fullName>
                <isActive>false</isActive>
                <label>License</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
                <isActive>false</isActive>
                <label>Maintenance</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
                <isActive>false</isActive>
                <label>Service</label>
            </value>
            <value>
                <fullName>Subscription</fullName>
                <isActive>false</isActive>
                <label>Subscription</label>
            </value>
            <value>
                <fullName>System Article</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>VTM</fullName>
            </value>
            <value>
                <fullName>Wallet</fullName>
                <isActive>false</isActive>
                <label>Wallet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>