force-app/main/default/objects/Product2/fields/Apttus_Config2__Uom__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Uom__c</fullName>
    <description>The default unit of measure for the product</description>
    <label>Uom</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>