force-app/main/default/objects/Product2/fields/Available_Programs__c.field-meta.xml
<CustomField>
    <fullName>Available_Programs__c</fullName>
    <description>For which programs this product can be sold in general. in each market the price list will decide, this is a central setting. shall come from CAT (central article tool)</description>
    <label>Available Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Programs</valueSetName>
    </valueSet>
</CustomField>