force-app/main/default/objects/Product2/fields/EnableStartDateEndDate__c.field-meta.xml
<CustomField>
    <fullName>EnableStartDateEndDate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to identify Weather start date is enabled for this bundle or not</description>
    <label>Enable Start Date &amp; End Date</label>
    <type>Checkbox</type>
</CustomField>