force-app/main/default/objects/Product2/fields/ProductSubtype__c.field-meta.xml
<CustomField>
    <fullName>ProductSubtype__c</fullName>
    <label>Product Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus_Config2__ProductType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academic/Classes</fullName>
            </value>
            <value>
                <fullName>Accommodation Deposit</fullName>
            </value>
            <value>
                <fullName>Accommodation Services</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Activity Vouchers</fullName>
            </value>
            <value>
                <fullName>Agent Commission</fullName>
            </value>
            <value>
                <fullName>Arrival and Departure</fullName>
            </value>
            <value>
                <fullName>Arrival Transfer</fullName>
            </value>
            <value>
                <fullName>Boat/Train/Bus</fullName>
            </value>
            <value>
                <fullName>Books</fullName>
            </value>
            <value>
                <fullName>Cax Insurance</fullName>
            </value>
            <value>
                <fullName>Departure Transfer</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Enrollment Fee</fullName>
            </value>
            <value>
                <fullName>Exam Extension</fullName>
            </value>
            <value>
                <fullName>Explore Pack</fullName>
            </value>
            <value>
                <fullName>Flight</fullName>
            </value>
            <value>
                <fullName>Fun Pack</fullName>
            </value>
            <value>
                <fullName>Gadgets</fullName>
            </value>
            <value>
                <fullName>Host Family</fullName>
            </value>
            <value>
                <fullName>Host Family Extra Night</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Hotel Extra Night</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>No Accommodation</fullName>
            </value>
            <value>
                <fullName>No Subtype</fullName>
            </value>
            <value>
                <fullName>Optional Excursions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>