force-app/main/default/objects/Product2/fields/QunatityModifiable__c.field-meta.xml
<CustomField>
    <fullName>QunatityModifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We have added this field so that we can modify the quantity in start date page</description>
    <label>Qunatity Modifiable</label>
    <type>Checkbox</type>
</CustomField>