force-app/main/default/objects/Product2/listViews/Courses.listView-meta.xml
<ListView>
    <fullName>Courses</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>PRODUCT2.NAME</columns>

    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>Course</value>
    </filters>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>LT Course</value>
    </filters>
    <label>Courses</label>
</ListView>